3장 내용 추가

--- a/181111-kafka/2018-11-18.md
+++ b/181111-kafka/2018-11-18.md
@@ -4,7 +4,7 @@
 
 지난주 수요일 [mini-meetup1](https://github.com/kafka-kru/meetup/tree/master/mini-meetup1) 내용이 좋았고 궁금한점 물어보기도 좋아요. <br>
 
-- 고승범 - 성능 이슈 비교
+- 고승범 - 성능 이슈
   - 서버는 5대 서버로 100만/1초 처리 가능
 - 이동진 : Kafka-생태계-들여다보기
   - What is Kafka ? (1~3)
@@ -19,3 +19,66 @@
 - 고승범 : Kafka-Summit-SF2018-참석후기
   - stream 멀까?
   - 다중 DB 에서 Transaction 관리에 유용하다
+
+## 3장 카프카 디자인
+
+책도 좋지만 빠르게 시작 하기에는 [Qyickstart](http://kafka.apache.org/10/documentation.html#quickstart) 좋아요. <br>
+
+### 3.1.1 분산 시스템
+
+- 단일 시스템 보다 더 높은 성능을 얻을수 있다.
+- 분산 시스템 중 하나의 서버 또는 노드 등이 장애가 발생하면 다른 서버 또는 노드가 대신 처리한다
+- 시스템 확장이 용이 하다
+
+### 3.1.2 페이지 캐시
+
+OS 페이지 캐시 기능 이용하도록 디자인됨 [Page cache wiki](https://en.wikipedia.org/wiki/Page_cache), [리눅스의 페이지 캐시와 버퍼 캐시-강진우](https://brunch.co.kr/@alden/25)
+그래서 저렴한 SATA 를 사용해도 무관하다.
+
+#### JVM heap size
+
+KAFKA_HEAP_OPTS="-Xmx6G -Xms6G" 권장 heap 은 5G 면 충분 하고 남는거는 페이지 캐시 사용 <br>
+다른 어플리케이션과 같이 사용시 페이지 캐시를 공유 하기 때문에 가능하면 다른 어플리케이션과는 별도로 사용해라
+
+### 3.1.3 배치 전송 처리
+
+메세지를 묶어서 데이터를 송수신
+
+### 3.2 카프카 데이터 모델
+
+- Topic
+  - 논리적은 주소
+  - 이름은 249 미만으로 사용
+  - 다른 MQ 시스템과 비교하면 Queue 개념을 포함
+  - Consumer 와 Producer 관계는 1:1, n:1, 1:n, n:n 도 가능
+- Partition
+  - 물리적인 디스크
+  - 데이터 송수신을 병렬로 처리
+
+#### 3.2.2 파티션의 이해
+
+파티션 증가는 언제든지 할수 있지만 파티션수 줄이는 방법은 없음 Topic 을 삭제해야함<br>
+파티션 수 판단이 어렵다면 적은 파티션수로 운영해 보고 프로듀서 또는 컨슈머에서 병목 현상 발생시 늘려 가자<br>
+브로커당 약 2,000 개의 최대 파티션수 권장
+
+### 3.3 카프카의 고가용성과 리플리케이션
+
+물리적 장애 발생시 Topic 을 Replication 하는것이 아니고 Partition 을 Replication 함
+
+- 리더
+  - 모든 데이터의 읽기 쓰기에 대한 요청에 응답하면서 데이터를 저장
+- 팔로워
+  - 리더를 주기적으로 보면서 자신에게 없는 데이터를 가져옴 모든 팔로워가 리더로 승격가능한것은 아님
+- ISR
+  - Replication 되고 있는 그룹 ISR 그룹만이 리더가 문제시 팔로워가 리더로 승격 가능
+
+### 3.4 모든 브로커가 다운된다면
+
+상황에 따른 선택이 필요
+
+- 무결한 복구가 우선
+  - 데이터 무결성 해결을 위해서는 재시작시 마지막 리더가 반드시 시작되어야 한다.
+  - 마지막 리더를 살리는 시간이 걸리면 장애 시간이 길어진다
+- 신속한 복구가 우선
+  - 먼저 복구가 가능한 리더를 시작 한다
+  - 데이터 손실이 발생함
